--- a/Chuchi/Podfile
+++ b/Chuchi/Podfile
@@ -5,3 +5,8 @@ pod 'INTULocationManager'
 pod 'GeoFire', :git => 'https://github.com/firebase/geofire-objc.git'
 pod 'AFNetworking', '~> 2.5'
 end
+
+target 'ChuchiSiriExtension' do
+pod 'FirebaseDatabase'
+pod 'Firebase'
+end
